--- a/docs/services/general-info/env-var-deltas/4.0.0-5.0.0-added.md
+++ b/docs/services/general-info/env-var-deltas/4.0.0-5.0.0-added.md
@@ -8,7 +8,7 @@
 |                                               | `MICRO_REGISTRY_AUTH_PASSWORD`                                                                                                                                                                     | Optional when using nats to authenticate with the nats cluster.                                                                                                                                                                                                                                                                                                                         |                                       |
 | services/antivirus/pkg/config/config.go       | `OCIS_EVENTS_AUTH_USERNAME`                                                                                                                                                                        | The username to authenticate with the events broker. The events broker is the ocis service which receives and delivers events between the services.                                                                                                                                                                                                                                                                                                                         |                                       |
 |                                               | `OCIS_EVENTS_AUTH_PASSWORD`                                                                                                                                                                        | The password to authenticate with the events broker. The events broker is the ocis service which receives and delivers events between the services.                                                                                                                                                                                                                                                                                                                         |                                       |
-|                                               | `ANTIVIRUS_ICAP_SCAN_TIMEOUT`                                                                                                                                                                           | Scan timeout for the ICAP client. Defaults to '5m' (5 minutes). See the Environment Variable Types description for more details.                                                                                                                                                                                                                                                                                                                         |   5m0s                                    |
+|                                               | `ANTIVIRUS_ICAP_SCAN_TIMEOUT`                                                                                                                                                                      | Scan timeout for the ICAP client. Defaults to '5m' (5 minutes). See the Environment Variable Types description for more details.                                                                                                                                                                                                                                                                                                                         |   5m0s                                    |
 | services/audit/pkg/config/config.go           | `OCIS_EVENTS_AUTH_USERNAME`                                                                                                                                                                        | The username to authenticate with the events broker. The events broker is the ocis service which receives and delivers events between the services.                                                                                                                                                                                                                                                                                                                         |                                       |
 |                                               | `OCIS_EVENTS_AUTH_PASSWORD`                                                                                                                                                                        | The password to authenticate with the events broker. The events broker is the ocis service which receives and delivers events between the services.                                                                                                                                                                                                                                                                                                                         |                                       |
 | services/auth-service/pkg/config/config.go    | `OCIS_TRACING_ENABLED;AUTH_SERVICE_TRACING_ENABLED`                                                                                                                                                | Activates tracing.                                                                                                                                                                                                                                                                                                                                                                                                                                                          |                                       |
@@ -144,6 +144,11 @@
 |                                               | `OCIS_TRACING_TYPE;POLICIES_TRACING_TYPE`                                                                                                                                                          | The type of tracing. Defaults to '', which is the same as 'jaeger'. Allowed tracing types are 'jaeger' and '' as of now."`                                                                                                                                                                                                                                                                                                                                                  |                                       |
 |                                               | `OCIS_TRACING_ENDPOINT;POLICIES_TRACING_ENDPOINT`                                                                                                                                                  | The endpoint of the tracing agent.                                                                                                                                                                                                                                                                                                                                                                                                                                          |                                       |
 |                                               | `OCIS_TRACING_COLLECTOR;POLICIES_TRACING_COLLECTOR`                                                                                                                                                | The HTTP endpoint for sending spans directly to a collector, i.e. http://jaeger-collector:14268/api/traces. Only used if the tracing endpoint is unset.                                                                                                                                                                                                                                                                                                                     |                                       |
+| services/ocs/pkg/config/config.go             | `OCIS_CACHE_STORE;OCS_PRESIGNEDURL_SIGNING_KEYS_STORE`                                                                                                                                             | The type of the signing key store. Supported values are: 'redis-sentinel' and 'nats-js-kv'. See the text description for details.                                                                                                                                                                                                                                                                                                                         |                                       |
+|                                               | `OCIS_CACHE_STORE_NODES;OCS_PRESIGNEDURL_SIGNING_KEYS_STORE_NODES`                                                                                                                                 | A list of nodes to access the configured store. Note that the behaviour how nodes are used is dependent on the library of the configured store. See the Environment Variable Types description for more details.                                                                                                                                                                                                                                                                                                                         |                                       |
+|                                               | `OCIS_CACHE_TTL;OCS_PRESIGNEDURL_SIGNING_KEYS_STORE_TTL`                                                                                                                                           | Default time to live for signing keys. See the Environment Variable Types description for more details.                                                                                                                                                                                                                                                                                                                         |                                       |
+|                                               | `OCIS_CACHE_AUTH_USERNAME;OCS_PRESIGNEDURL_SIGNING_KEYS_STORE_AUTH_USERNAME`                                                                                                                       | The username to authenticate with the store. Only applies when store type 'nats-js-kv' is configured.                                                                                                                                                                                                                                                                                                                         |                                       |
+|                                               | `OCIS_CACHE_AUTH_PASSWORD;OCS_PRESIGNEDURL_SIGNING_KEYS_STORE_AUTH_PASSWORD`                                                                                                                       | The password to authenticate with the store. Only applies when store type 'nats-js-kv' is configured.                                                                                                                                                                                                                                                                                                                         |                                       |
 | services/postprocessing/pkg/config/config.go  | `POSTPROCESSING_RETRY_BACKOFF_DURATION`                                                                                                                                                            | The base for the exponential backoff duration before retrying a failed postprocessing step. See the Environment Variable Types description for more details.                                                                                                                                                                                                                                                                                                                |                                       |
 |                                               | `POSTPROCESSING_MAX_RETRIES`                                                                                                                                                                       | The maximum number of retries for a failed postprocessing step.                                                                                                                                                                                                                                                                                                                                                                                                             |                                       |
 |                                               | `OCIS_EVENTS_AUTH_USERNAME;POSTPROCESSING_EVENTS_AUTH_USERNAME`                                                                                                                                    | The username to authenticate with the events broker. The events broker is the ocis service which receives and delivers events between the services.                                                                                                                                                                                                                                                                                                                         |                                       |
@@ -156,6 +161,12 @@
 |                                               | `OCIS_TRACING_COLLECTOR;POSTPROCESSING_TRACING_COLLECTOR`                                                                                                                                          | The HTTP endpoint for sending spans directly to a collector, i.e. http://jaeger-collector:14268/api/traces. Only used if the tracing endpoint is unset.                                                                                                                                                                                                                                                                                                                     |                                       |
 | services/proxy/pkg/config/config.go           | `OCIS_CACHE_AUTH_USERNAME;PROXY_OIDC_USERINFO_CACHE_AUTH_USERNAME`                                                                                                                                 | The username to authenticate with the cache. Only applies when store type 'nats-js-kv' is configured.                                                                                                                                                                                                                                                                                                                                                                       |                                       |
 |                                               | `OCIS_CACHE_AUTH_PASSWORD;PROXY_OIDC_USERINFO_CACHE_AUTH_PASSWORD`                                                                                                                                 | The password to authenticate with the cache. Only applies when store type 'nats-js-kv' is configured.                                                                                                                                                                                                                                                                                                                                                                       |                                       |
+|                                               | `OCIS_CACHE_STORE;PROXY_PRESIGNEDURL_SIGNING_KEYS_STORE`                                                                                                                                           | The type of the signing key store. Supported values are: 'redis-sentinel' and 'nats-js-kv'. See the text description for details.                                                                                                                                                                                                                                                                                                                         |                                       |
+|                                               | `OCIS_CACHE_STORE_NODES;PROXY_PRESIGNEDURL_SIGNING_KEYS_STORE_NODES`                                                                                                                               | A list of nodes to access the configured store. Note that the behaviour how nodes are used is dependent on the library of the configured store. See the Environment Variable Types description for more details.                                                                                                                                                                                                                                                                                                                         |                                       |
+|                                               | `OCIS_CACHE_TTL;PROXY_PRESIGNEDURL_SIGNING_KEYS_STORE_TTL`                                                                                                                                         | Default time to live for signing keys. See the Environment Variable Types description for more details.                                                                                                                                                                                                                                                                                                                         |                                       |
+|                                               | `OCIS_CACHE_DISABLE_PERSISTENCE;PROXY_PRESIGNEDURL_SIGNING_KEYS_STORE_DISABLE_PERSISTENCE`                                                                                                         | Disables persistence of the store. Only applies when store type 'nats-js-kv' is configured. Defaults to true.                                                                                                                                                                                                                                                                                                                         |                                       |
+|                                               | `OCIS_CACHE_AUTH_USERNAME;PROXY_PRESIGNEDURL_SIGNING_KEYS_STORE_AUTH_USERNAME`                                                                                                                     | The username to authenticate with the store. Only applies when store type 'nats-js-kv' is configured.                                                                                                                                                                                                                                                                                                                         |                                       |
+|                                               | `OCIS_CACHE_AUTH_PASSWORD;PROXY_PRESIGNEDURL_SIGNING_KEYS_STORE_AUTH_PASSWORD`                                                                                                                     | The password to authenticate with the store. Only applies when store type 'nats-js-kv' is configured.                                                                                                                                                                                                                                                                                                                         |                                       |
 |                                               | `OCIS_SERVICE_ACCOUNT_ID;PROXY_SERVICE_ACCOUNT_ID`                                                                                                                                                 | The ID of the service account the service should use. See the 'auth-service' service description for more details.                                                                                                                                                                                                                                                                                                                                                          |                                       |
 |                                               | `OCIS_SERVICE_ACCOUNT_SECRET;PROXY_SERVICE_ACCOUNT_SECRET`                                                                                                                                         | The service account secret.                                                                                                                                                                                                                                                                                                                                                                                                                                                 |                                       |
 | services/search/pkg/config/config.go          | `OCIS_SERVICE_ACCOUNT_ID;SEARCH_SERVICE_ACCOUNT_ID`                                                                                                                                                | The ID of the service account the service should use. See the 'auth-service' service description for more details.                                                                                                                                                                                                                                                                                                                                                          |                                       |
@@ -194,8 +205,8 @@
 |                                               | `OCIS_CORS_ALLOW_METHODS;SSE_CORS_ALLOW_METHODS`                                                                                                                                                   | A list of allowed CORS methods. See following chapter for more details: *Access-Control-Allow-Methods* at https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Access-Control-Allow-Methods. See the Environment Variable Types description for more details.                                                                                                                                                                                                          |                                       |
 |                                               | `OCIS_CORS_ALLOW_HEADERS;SSE_CORS_ALLOW_HEADERS`                                                                                                                                                   | A list of allowed CORS headers. See following chapter for more details: *Access-Control-Allow-Headers* at https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Access-Control-Allow-Headers. See the Environment Variable Types description for more details.                                                                                                                                                                                                          |                                       |
 |                                               | `OCIS_CORS_ALLOW_CREDENTIALS;SSE_CORS_ALLOW_CREDENTIALS`                                                                                                                                           | Allow credentials for CORS.See following chapter for more details: *Access-Control-Allow-Credentials* at https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Access-Control-Allow-Credentials.                                                                                                                                                                                                                                                                        |                                       |
-|                                               | `SSE_HTTP_ADDR`                                                                                                                                                                                    |                                                                                                                                                                                                                                                                                                                                                                                                                                                                             | The bind address of the HTTP service. |         |
-|                                               | `SSE_HTTP_ROOT`                                                                                                                                                                                    |                                                                                                                                                                                                                                                                                                                                                                                                                                                                             | The root path of the HTTP service.    |         |
+|                                               | `SSE_HTTP_ADDR`                                                                                                                                                                                    | The bind address of the HTTP service.                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
+|                                               | `SSE_HTTP_ROOT`                                                                                                                                                                                    | The root path of the HTTP service.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
 |                                               | `OCIS_JWT_SECRET;SSE_JWT_SECRET`                                                                                                                                                                   | The secret to mint and validate jwt tokens.                                                                                                                                                                                                                                                                                                                                                                                                                                 |                                       |
 | services/sse/pkg/config/tracing.go            | `OCIS_TRACING_ENABLED;SSE_TRACING_ENABLED`                                                                                                                                                         | Activates tracing.                                                                                                                                                                                                                                                                                                                                                                                                                                                          |                                       |
 |                                               | `OCIS_TRACING_TYPE;SSE_TRACING_TYPE`                                                                                                                                                               | The type of tracing. Defaults to '', which is the same as 'jaeger'. Allowed tracing types are 'jaeger' and '' as of now."`                                                                                                                                                                                                                                                                                                                                                  |                                       |
