--- a/docs/services/general-info/env-var-deltas/4.0.0-5.0.0-added.md
+++ b/docs/services/general-info/env-var-deltas/4.0.0-5.0.0-added.md
@@ -214,7 +214,7 @@
 |                                               | `OCIS_TRACING_COLLECTOR;SSE_TRACING_COLLECTOR`                                                                                                                                                     | The HTTP endpoint for sending spans directly to a collector, i.e. http://jaeger-collector:14268/api/traces. Only used if the tracing endpoint is unset.                                                                                                                                                                                                                                                                                                                     |                                       |
 | services/storage-system/pkg/config/config.go  | `OCIS_CACHE_DISABLE_PERSISTENCE;STORAGE_SYSTEM_CACHE_DISABLE_PERSISTENCE`                                                                                                                          | Disables persistence of the cache. Only applies when store type 'nats-js-kv' is configured. Defaults to false.                                                                                                                                                                                                                                                                                                                                                              | false                                 |
 | services/storage-users/pkg/config/config.go   | `OCIS_GATEWAY_GRPC_ADDR;STORAGE_USERS_GATEWAY_GRPC_ADDR`                                                                                                                                           | The bind address of the gateway GRPC address.                                                                                                                                                                                                                                                                                                                                                                                                                               |                                       |
-|                                               | `OCIS_MACHINE_AUTH_API_KEY`                                                                                                                                                                        | Machine auth API key used to validate internal requests necessary for the access to resources from other services.                                                                                                                                                                                                                                                                                                                                                          |                                       |
+|                                               | `OCIS_MACHINE_AUTH_API_KEY;STORAGE_USERS_MACHINE_AUTH_API_KEY`                                                                                                                                     | Machine auth API key used to validate internal requests necessary for the access to resources from other services.                                                                                                                                                                                                                                                                                                                                                          |                                       |
 |                                               | `STORAGE_USERS_CLI_MAX_ATTEMPTS_RENAME_FILE`                                                                                                                                                       | The maximum number of attempts to rename a file when a user restores a file to an existing destination with the same name. The minimum value is 100.                                                                                                                                                                                                                                                                                                                        |                                       |
 |                                               | `OCIS_EVENTS_AUTH_USERNAME;STORAGE_USERS_EVENTS_AUTH_USERNAME`                                                                                                                                     | The username to authenticate with the events broker. The events broker is the ocis service which receives and delivers events between the services.                                                                                                                                                                                                                                                                                                                         |                                       |
 |                                               | `OCIS_EVENTS_AUTH_PASSWORD;STORAGE_USERS_EVENTS_AUTH_PASSWORD`                                                                                                                                     | The password to authenticate with the events broker. The events broker is the ocis service which receives and delivers events between the services.                                                                                                                                                                                                                                                                                                                         |                                       |
