chore: move tracing env vars into auth-service/pkg/config/tracing.go section

--- a/docs/services/general-info/env-var-deltas/4.0.0-5.0.0-added.md
+++ b/docs/services/general-info/env-var-deltas/4.0.0-5.0.0-added.md
@@ -11,11 +11,7 @@
 |                                               | `ANTIVIRUS_ICAP_SCAN_TIMEOUT`                                                                                                                                                                      | Scan timeout for the ICAP client. Defaults to '5m' (5 minutes). See the Environment Variable Types description for more details.                                                                                                                                                                                                                                                                                                                         |   5m0s                                    |
 | services/audit/pkg/config/config.go           | `OCIS_EVENTS_AUTH_USERNAME`                                                                                                                                                                        | The username to authenticate with the events broker. The events broker is the ocis service which receives and delivers events between the services.                                                                                                                                                                                                                                                                                                                         |                                       |
 |                                               | `OCIS_EVENTS_AUTH_PASSWORD`                                                                                                                                                                        | The password to authenticate with the events broker. The events broker is the ocis service which receives and delivers events between the services.                                                                                                                                                                                                                                                                                                                         |                                       |
-| services/auth-service/pkg/config/config.go    | `OCIS_TRACING_ENABLED;AUTH_SERVICE_TRACING_ENABLED`                                                                                                                                                | Activates tracing.                                                                                                                                                                                                                                                                                                                                                                                                                                                          |                                       |
-|                                               | `OCIS_TRACING_TYPE;AUTH_SERVICE_TRACING_TYPE`                                                                                                                                                      | The type of tracing. Defaults to '', which is the same as 'jaeger'. Allowed tracing types are 'jaeger' and '' as of now."`                                                                                                                                                                                                                                                                                                                                                  |                                       |
-|                                               | `OCIS_TRACING_ENDPOINT;AUTH_SERVICE_TRACING_ENDPOINT`                                                                                                                                              | The endpoint of the tracing agent.                                                                                                                                                                                                                                                                                                                                                                                                                                          |                                       |
-|                                               | `OCIS_TRACING_COLLECTOR;AUTH_SERVICE_TRACING_COLLECTOR`                                                                                                                                            | The HTTP endpoint for sending spans directly to a collector, i.e. http://jaeger-collector:14268/api/traces. Only used if the tracing endpoint is unset.                                                                                                                                                                                                                                                                                                                     |                                       |
-|                                               | `OCIS_LOG_LEVEL;AUTH_SERVICE_LOG_LEVEL`                                                                                                                                                            | The log level. Valid values are: 'panic', 'fatal', 'error', 'warn', 'info', 'debug', 'trace'."                                                                                                                                                                                                                                                                                                                                                                              |                                       |
+| services/auth-service/pkg/config/config.go    | `OCIS_LOG_LEVEL;AUTH_SERVICE_LOG_LEVEL`                                                                                                                                                            | The log level. Valid values are: 'panic', 'fatal', 'error', 'warn', 'info', 'debug', 'trace'."                                                                                                                                                                                                                                                                                                                                                                              |                                       |
 |                                               | `OCIS_LOG_PRETTY;AUTH_SERVICE_LOG_PRETTY`                                                                                                                                                          | Activates pretty log output.                                                                                                                                                                                                                                                                                                                                                                                                                                                |                                       |
 |                                               | `OCIS_LOG_COLOR;AUTH_SERVICE_LOG_COLOR`                                                                                                                                                            | Activates colorized log output.                                                                                                                                                                                                                                                                                                                                                                                                                                             |                                       |
 |                                               | `OCIS_LOG_FILE;AUTH_SERVICE_LOG_FILE`                                                                                                                                                              | The path to the log file. Activates logging to this file if set.                                                                                                                                                                                                                                                                                                                                                                                                            |                                       |
@@ -27,7 +23,11 @@
 |                                               | `OCIS_SERVICE_ACCOUNT_ID;AUTH_SERVICE_SERVICE_ACCOUNT_ID`                                                                                                                                          | The ID of the service account the service should use. See the 'auth-service' service description for more details.                                                                                                                                                                                                                                                                                                                                                          |                                       |
 |                                               | `OCIS_SERVICE_ACCOUNT_SECRET;AUTH_SERVICE_SERVICE_ACCOUNT_SECRET`                                                                                                                                  | The service account secret.                                                                                                                                                                                                                                                                                                                                                                                                                                                 |                                       |
 | services/auth-service/pkg/config/reva.go      | `OCIS_JWT_SECRET;AUTH_SERVICE_JWT_SECRET`                                                                                                                                                          | The secret to mint and validate jwt tokens.                                                                                                                                                                                                                                                                                                                                                                                                                                 |                                       |
-| services/clientlog/pkg/config/config.go       | `OCIS_REVA_GATEWAY`                                                                                                                                                                                | CS3 gateway used to look up user metadata                                                                                                                                                                                                                                                                                                                                                                                                                                   |                                       |
+| services/auth-service/pkg/config/tracing.go   | `OCIS_TRACING_ENABLED;AUTH_SERVICE_TRACING_ENABLED`                                                                                                                                                | Activates tracing.                                                                                                                                                                                                                                                                                                                                                                                                                                                          |                                       |
+|                                               | `OCIS_TRACING_TYPE;AUTH_SERVICE_TRACING_TYPE`                                                                                                                                                      | The type of tracing. Defaults to '', which is the same as 'jaeger'. Allowed tracing types are 'jaeger' and '' as of now."`                                                                                                                                                                                                                                                                                                                                                  |                                       |
+|                                               | `OCIS_TRACING_ENDPOINT;AUTH_SERVICE_TRACING_ENDPOINT`                                                                                                                                              | The endpoint of the tracing agent.                                                                                                                                                                                                                                                                                                                                                                                                                                          |                                       |
+|                                               | `OCIS_TRACING_COLLECTOR;AUTH_SERVICE_TRACING_COLLECTOR`                                                                                                                                            | The HTTP endpoint for sending spans directly to a collector, i.e. http://jaeger-collector:14268/api/traces. Only used if the tracing endpoint is unset.                                                                                                                                                                                                                                                                                                                     |                                       |
+| services/clientlog/pkg/config/config.go       | `OCIS_REVA_GATEWAY;CLIENTLOG_REVA_GATEWAY`                                                                                                                                                         | CS3 gateway used to look up user metadata                                                                                                                                                                                                                                                                                                                                                                                                                                   |                                       |
 |                                               | `OCIS_EVENTS_ENDPOINT;CLIENTLOG_EVENTS_ENDPOINT`                                                                                                                                                   | The address of the event system. The event system is the message queuing service. It is used as message broker for the microservice architecture.                                                                                                                                                                                                                                                                                                                           |                                       |
 |                                               | `OCIS_EVENTS_CLUSTER;CLIENTLOG_EVENTS_CLUSTER`                                                                                                                                                     | The clusterID of the event system. The event system is the message queuing service. It is used as message broker for the microservice architecture. Mandatory when using NATS as event system.                                                                                                                                                                                                                                                                              |                                       |
 |                                               | `OCIS_INSECURE;CLIENTLOG_EVENTS_TLS_INSECURE`                                                                                                                                                      | Whether to verify the server TLS certificates.                                                                                                                                                                                                                                                                                                                                                                                                                              |                                       |
