[full-ci] enhancement: allow ocis to provide custom web applications (#8523)
* enhancement: allow ocis to provide custom web applications

* enhancement: add an option to disable web apps

* test: add default logger tests

* test: add app loading tests

* test: add asset server tests

* enhancement: make use of dedicated app conf file and app asset paths

* enhancement: adjust asset locations and deprecate WEB_ASSET_PATH

* enhancement: get rid of default logger and use the service level logger instead

* Apply suggestions from code review

Co-authored-by: Benedikt Kulmann <benedikt@kulmann.biz>
Co-authored-by: kobergj <juliankoberg@googlemail.com>

* enhancement: use basename as app id

* Apply suggestions from code review

Co-authored-by: Martin <github@diemattels.at>

* enhancement: use afero as fs abstraction

* enhancement: simplify logo upload

* enhancement: make use of introductionVersion field annotations

---------

Co-authored-by: Benedikt Kulmann <benedikt@kulmann.biz>
Co-authored-by: kobergj <juliankoberg@googlemail.com>
Co-authored-by: Martin <github@diemattels.at>

--- a/services/_includes/adoc/extended_configvars.adoc
+++ b/services/_includes/adoc/extended_configvars.adoc
@@ -13,12 +13,28 @@
 
 a| `MICRO_LOG_LEVEL` +
 a| [subs=-attributes]
+++ ++
+a| [subs=-attributes]
+++ ++
+a| [subs=-attributes]
+++ ++
+
+a| `MICRO_LOG_LEVEL` +
+a| [subs=-attributes]
 ++string ++
 a| [subs=-attributes]
 ++Error ++
 a| [subs=-attributes]
 ++Set the log level for the internal go micro framework. Only change on supervision of ownCloud Support. ++
     
+
+a| `MICRO_LOG_LEVEL` +
+a| [subs=-attributes]
+++ ++
+a| [subs=-attributes]
+++ ++
+a| [subs=-attributes]
+++ ++
 
 a| `MICRO_REGISTRY` +
 a| [subs=-attributes]
@@ -27,6 +43,7 @@ a| [subs=-attributes]
 ++nats-js-kv ++
 a| [subs=-attributes]
 ++The Go micro registry type to use. Supported types are: 'memory', 'nats-js-kv' (default) and 'kubernetes'. Note that 'nats', 'etcd', 'consul' and 'mdns' are deprecated and will be removed in a later version. Only change on supervision of ownCloud Support. ++
+    
 
 a| `MICRO_REGISTRY_ADDRESS` +
 a| [subs=-attributes]
@@ -35,7 +52,6 @@ a| [subs=-attributes]
 ++127.0.0.1:9233 ++
 a| [subs=-attributes]
 ++The bind address of the internal go micro framework. Only change on supervision of ownCloud Support. ++
-    
 
 a| `MICRO_REGISTRY_AUTH_PASSWORD` +
 a| [subs=-attributes]
@@ -68,5 +84,13 @@ a| [subs=-attributes]
 ++ ++
 a| [subs=-attributes]
 ++The default directory location for config files. See the General Info section in the documentation for more details on defaults. ++
+
+a| `RUN_CMD_TEST` +
+a| [subs=-attributes]
+++ ++
+a| [subs=-attributes]
+++ ++
+a| [subs=-attributes]
+++ ++
     
 |===
